Fix styling issue seen on Safari

--- a/src/pages/public-home/public-home.scss
+++ b/src/pages/public-home/public-home.scss
@@ -94,7 +94,7 @@
     position: absolute;
     top: -23.9%;
     height: 24%;
-    width: 100vw;
+    width: 102vw;
     z-index: -1;
   }
 
